refactor(system): 使用 Stream.toList() 替代 collect(Collectors.toList())